Fixing reference to js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <p class="breaths">Breaths remaining: <span class="breaths-text">3</span></p>
         <p class="instructions">Are you ready to start breathing?</p>
         <button clas="start">Begin</button>
-        <script src="/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
